팀원 상세페이지 추가, 포스트에 작성자 표시 기능 추가

--- a/data/authors/최현용.mdx
+++ b/data/authors/최현용.mdx
@@ -4,6 +4,6 @@ avatar: /static/images/avatar_choi.png
 github: https://github.com/HyeonyongChoe
 ---
 
-## Suwon Yang
+## Choi Hyeon Yong
 
-안녕하세요. 양수원입니다.
+안녕하세요. 최현용입니다.
