--- a/data/blog/240128이찬우.mdx
+++ b/data/blog/240128이찬우.mdx
@@ -2,6 +2,7 @@
 title: '이 블로그 글 작성법'
 date: '2024-01-28'
 tags: ['블로그 글 작성법']
+authors: ['이찬우']
 category: 'MDX'
 draft: false
 summary: 여기는 요약을 쓰는 곳입니다.
