이미지 업로드 방법 추가

--- a/data/blog/240128이찬우.mdx
+++ b/data/blog/240128이찬우.mdx
@@ -9,3 +9,11 @@ summary: 여기는 요약을 쓰는 곳입니다.
 ---
 
 # 노션에 글 쓰고 여기에 붙여넣으세요.
+
+이미지는 /public/static/images 폴더에 넣고, 아래와 같이 쓰면 됩니다.
+
+```jsx
+<Image alt="" src="/static/images/avatar.png" width={800} height={800} />
+```
+
+<Image alt="" src="/static/images/avatar.png" width={800} height={800} />
