✨ feat : 24.01.29 이찬우 스몰톡 추가

--- a/data/blog/example.mdx
+++ b/data/blog/example.mdx
@@ -3,10 +3,12 @@ title: '이 블로그 글 작성법'
 date: '2024-01-28'
 tags: ['블로그 글 작성법']
 authors: ['이찬우']
-category: 'MDX'
+category: 'mdx'
 draft: false
 summary: 여기는 요약을 쓰는 곳입니다.
 ---
+
+/data/blog 폴더에 mdx 파일을 만들고, 아래와 같은 형식으로 글을 쓰면 됩니다.
 
 # 노션에 글 쓰고 여기에 붙여넣으세요.
 
