--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -4,5 +4,6 @@ name: team
 
 - **GITHUB** : https://github.com/orgs/ugizz
 - **JIRA** : https://com2uscamp.atlassian.net/jira/software/projects/CC/boards/1/timeline
-- **FIGMA :** https://www.figma.com/file/8nYL0sASQV5Czj6hwgVmKp/ugizz?type=design&node-id=0%3A1&mode=design&t=ABuU6Husmy5CGlGB-1
-- **REFERENCE** : [문서](https://www.notion.so/0a70a1def7754df49c07b6e95a4a417d?pvs=21)
+- **FIGMA** : https://www.figma.com/file/8nYL0sASQV5Czj6hwgVmKp/ugizz?type=design&node-id=0%3A1&mode=design&t=ABuU6Husmy5CGlGB-1
+- **FUNCTION SPECIFICATION** : https://docs.google.com/spreadsheets/d/1hplg2pHMcSwBZQNSdrdHMRKj3wI4WhwjUJmQZk1Pbf4/edit#gid=0
+- **PLAN** :https://sangeons.notion.site/0c0fa0dfde654c7bb4193625ac093ab9?pvs=4
