📝 docs : 24.02.02 전상언 회고 작성

--- a/data/blog/240202전상언.mdx
+++ b/data/blog/240202전상언.mdx
@@ -14,14 +14,14 @@ summary: 'unity client 작업 및 PM 업무 수행'
 - Mirror 네트워크 설치 및 Room Manager (완료)
     - 에러가 발생한 부분
         
-        <img src="https://drive.google.com/uc?id=1M8PTGc11cNd7RZhH51hbNyjS-BBYfUiF" width=400 height=800>
+        <Image alt="" src="https://drive.google.com/uc?id=1M8PTGc11cNd7RZhH51hbNyjS-BBYfUiF" width={400} height={800} />
 
         - 해당 prefabs을 만들 때 component에 Network identity를 추가해주어야 정상 작동됨.
         - **`Network Identity`** 컴포넌트는 Unity의 네트워킹 고수준 API에서 중요한 역할을 하는 컴포넌트입니다. 이 컴포넌트는 게임 오브젝트의 고유한 식별자를 네트워크에서 제어하며, 네트워킹 시스템에 해당 게임 오브젝트를 알리는 데 사용됩니다.
         공식문서 링크 : https://mirror-networking.gitbook.io/docs/manual/components/network-identity
     - Mirror 네트워크와 Room Manager 완성 된 모습
         
-        <img src="https://drive.google.com/uc?id=1jAYTZxg4RxYHhObET8bV7CMNkXXIftEW" width=900 height=400>
+        <Image alt="" src="https://drive.google.com/uc?id=1jAYTZxg4RxYHhObET8bV7CMNkXXIftEW" width={900} height={400} />
 
 
 [PM]
