📝 docs : 24.02.07 이찬우 회고 작성

--- a/data/blog/240206이찬우.mdx
+++ b/data/blog/240206이찬우.mdx
@@ -5,7 +5,7 @@ tags: ['아키텍쳐', '서버', 'Nestjs', 'msa', 'colyseus']
 authors: ['이찬우']
 category: '회고'
 draft: false
-summary: '마이크로서비스 기본 레포지토리 생성'
+summary: 'API Gateway, Colyseus Server'
 ---
 
 ## API Gateway
